cst-405/parser.output
Terminals unused in grammar

    VOID
    INPUT


State 5 conflicts: 1 shift/reduce
State 15 conflicts: 1 shift/reduce
State 26 conflicts: 1 shift/reduce
State 28 conflicts: 7 shift/reduce
State 31 conflicts: 1 shift/reduce
State 36 conflicts: 1 shift/reduce
State 41 conflicts: 1 shift/reduce
State 42 conflicts: 1 shift/reduce
State 43 conflicts: 5 shift/reduce
State 52 conflicts: 1 shift/reduce
State 61 conflicts: 1 shift/reduce
State 81 conflicts: 5 shift/reduce
State 82 conflicts: 1 shift/reduce
State 83 conflicts: 1 shift/reduce
State 84 conflicts: 1 shift/reduce
State 85 conflicts: 1 shift/reduce
State 98 conflicts: 7 shift/reduce
State 111 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: Decl DeclList
    3         | %empty

    4 Decl: VarDecl
    5     | FunDecl
    6     | Stmt

    7 VarDeclId: ID
    8          | ID LBRACK NUMBER RBRACK

    9 VarDecl: TYPE VarDeclId SEMICOLON
   10        | TYPE VarDeclId

   11 ParamDeclList: ParamDeclListTail
   12              | %empty

   13 $@1: %empty

   14 FunDecl: TYPE ID LPAREN $@1 ParamDeclList RPAREN Block

   15 ParamDeclListTail: ParamDecl
   16                  | ParamDecl COMMA ParamDeclListTail

   17 ParamDecl: TYPE ID
   18          | TYPE ID LBRACK NUMBER RBRACK

   19 Block: LCURL InnerBlockList RCURL
   20      | LCURL RCURL

   21 InnerBlockList: InnerBlock InnerBlockList
   22               | %empty

   23 InnerBlock: VarDecl
   24           | Stmt

   25 ExprListTail: Expr
   26             | Expr COMMA ExprListTail

   27 ExprList: ExprListTail
   28         | %empty

   29 Primary: ID
   30        | NUMBER
   31        | CHACHA
   32        | STRING
   33        | LPAREN Expr RPAREN

   34 $@2: %empty

   35 Primary: COMMA ID $@2 LPAREN ExprList RPAREN
   36        | ID LBRACK Expr RBRACK

   37 Expr: Primary
   38     | READ LPAREN ID RPAREN SEMICOLON
   39     | READ LPAREN RPAREN SEMICOLON
   40     | READ LPAREN ID SEMICOLON
   41     | READ ID RPAREN SEMICOLON
   42     | READ RPAREN ID RPAREN
   43     | UNARYOP Expr
   44     | Expr BINOP Expr
   45     | Expr '+' Expr
   46     | Expr '-' Expr
   47     | Expr '*' Expr
   48     | Expr '/' Expr
   49     | ID EQ Expr
   50     | ID LBRACK Expr RBRACK EQ Expr
   51     | ID EQ
   52     | ID LBRACK Expr RBRACK EQ

   53 Stmt: SEMICOLON
   54     | Expr SEMICOLON
   55     | Expr
   56     | RETURN Expr SEMICOLON
   57     | RETURN SEMICOLON
   58     | RETURN Expr
   59     | WRITE Expr SEMICOLON
   60     | WRITE Expr
   61     | WRITELN SEMICOLON
   62     | WRITELN Expr SEMICOLON
   63     | WRITELN Expr
   64     | BREAK SEMICOLON
   65     | BREAK

   66 $@3: %empty

   67 $@4: %empty

   68 $@5: %empty

   69 $@6: %empty

   70 $@7: %empty

   71 $@8: %empty

   72 Stmt: IFELSE $@3 LPAREN Expr $@4 RPAREN $@5 Stmt $@6 ELSE $@7 Stmt $@8

   73 $@9: %empty

   74 $@10: %empty

   75 $@11: %empty

   76 Stmt: IF LPAREN Expr $@9 RPAREN $@10 Stmt $@11

   77 $@12: %empty

   78 $@13: %empty

   79 Stmt: WHILE $@12 LPAREN Expr RPAREN $@13 Stmt
   80     | Block


Terminals, with rules where they appear

    $end (0) 0
    '*' (42) 47
    '+' (43) 45
    '-' (45) 46
    '/' (47) 48
    error (256)
    ID <string> (258) 7 8 14 17 18 29 35 36 38 40 41 42 49 50 51 52
    BINOP <string> (259) 44
    RETURN <string> (260) 56 57 58
    READ <string> (261) 38 39 40 41 42
    WRITELN <string> (262) 61 62 63
    BREAK <string> (263) 64 65
    IFELSE <string> (264) 72
    IF <string> (265) 76
    ELSE <string> (266) 72
    WHILE <string> (267) 79
    VOID <string> (268)
    TYPE <string> (269) 9 10 14 17 18
    UNARYOP <string> (270) 43
    SEMICOLON <string> (271) 9 38 39 40 41 53 54 56 57 59 61 62 64
    STRING <string> (272) 32
    CHACHA <string> (273) 31
    COMMA <character> (274) 16 26 35
    EQ <character> (275) 49 50 51 52
    LCURL <character> (276) 19 20
    RCURL <character> (277) 19 20
    LBRACK <character> (278) 8 18 36 50 52
    RBRACK <character> (279) 8 18 36 50 52
    LPAREN <character> (280) 14 33 35 38 39 40 72 76 79
    RPAREN <character> (281) 14 33 35 38 39 41 42 72 76 79
    NUMBER <number> (282) 8 18 30
    WRITE (283) 59 60
    INPUT (284)


Nonterminals, with rules where they appear

    $accept (34)
        on left: 0
    Program <ast> (35)
        on left: 1
        on right: 0
    DeclList <ast> (36)
        on left: 2 3
        on right: 1 2
    Decl <ast> (37)
        on left: 4 5 6
        on right: 2
    VarDeclId <ast> (38)
        on left: 7 8
        on right: 9 10
    VarDecl <ast> (39)
        on left: 9 10
        on right: 4 23
    ParamDeclList <ast> (40)
        on left: 11 12
        on right: 14
    FunDecl <ast> (41)
        on left: 14
        on right: 5
    $@1 (42)
        on left: 13
        on right: 14
    ParamDeclListTail <ast> (43)
        on left: 15 16
        on right: 11 16
    ParamDecl <ast> (44)
        on left: 17 18
        on right: 15 16
    Block <ast> (45)
        on left: 19 20
        on right: 14 80
    InnerBlockList <ast> (46)
        on left: 21 22
        on right: 19 21
    InnerBlock <ast> (47)
        on left: 23 24
        on right: 21
    ExprListTail <ast> (48)
        on left: 25 26
        on right: 26 27
    ExprList <ast> (49)
        on left: 27 28
        on right: 35
    Primary <ast> (50)
        on left: 29 30 31 32 33 35 36
        on right: 37
    $@2 (51)
        on left: 34
        on right: 35
    Expr <ast> (52)
        on left: 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52
        on right: 25 26 33 36 43 44 45 46 47 48 49 50 52 54 55 56 58 59 60 62 63 72 76 79
    Stmt <ast> (53)
        on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 72 76 79 80
        on right: 6 24 72 76 79
    $@3 (54)
        on left: 66
        on right: 72
    $@4 (55)
        on left: 67
        on right: 72
    $@5 (56)
        on left: 68
        on right: 72
    $@6 (57)
        on left: 69
        on right: 72
    $@7 (58)
        on left: 70
        on right: 72
    $@8 (59)
        on left: 71
        on right: 72
    $@9 (60)
        on left: 73
        on right: 76
    $@10 (61)
        on left: 74
        on right: 76
    $@11 (62)
        on left: 75
        on right: 76
    $@12 (63)
        on left: 77
        on right: 79
    $@13 (64)
        on left: 78
        on right: 79


State 0

    0 $accept: . Program $end

    ID         shift, and go to state 1
    RETURN     shift, and go to state 2
    READ       shift, and go to state 3
    WRITELN    shift, and go to state 4
    BREAK      shift, and go to state 5
    IFELSE     shift, and go to state 6
    IF         shift, and go to state 7
    WHILE      shift, and go to state 8
    TYPE       shift, and go to state 9
    UNARYOP    shift, and go to state 10
    SEMICOLON  shift, and go to state 11
    STRING     shift, and go to state 12
    CHACHA     shift, and go to state 13
    COMMA      shift, and go to state 14
    LCURL      shift, and go to state 15
    LPAREN     shift, and go to state 16
    NUMBER     shift, and go to state 17
    WRITE      shift, and go to state 18

    $default  reduce using rule 3 (DeclList)

    Program   go to state 19
    DeclList  go to state 20
    Decl      go to state 21
    VarDecl   go to state 22
    FunDecl   go to state 23
    Block     go to state 24
    Primary   go to state 25
    Expr      go to state 26
    Stmt      go to state 27


State 1

   29 Primary: ID .
   36        | ID . LBRACK Expr RBRACK
   49 Expr: ID . EQ Expr
   50     | ID . LBRACK Expr RBRACK EQ Expr
   51     | ID . EQ
   52     | ID . LBRACK Expr RBRACK EQ

    EQ      shift, and go to state 28
    LBRACK  shift, and go to state 29

    $default  reduce using rule 29 (Primary)


State 2

   56 Stmt: RETURN . Expr SEMICOLON
   57     | RETURN . SEMICOLON
   58     | RETURN . Expr

    ID         shift, and go to state 1
    READ       shift, and go to state 3
    UNARYOP    shift, and go to state 10
    SEMICOLON  shift, and go to state 30
    STRING     shift, and go to state 12
    CHACHA     shift, and go to state 13
    COMMA      shift, and go to state 14
    LPAREN     shift, and go to state 16
    NUMBER     shift, and go to state 17

    Primary  go to state 25
    Expr     go to state 31


State 3

   38 Expr: READ . LPAREN ID RPAREN SEMICOLON
   39     | READ . LPAREN RPAREN SEMICOLON
   40     | READ . LPAREN ID SEMICOLON
   41     | READ . ID RPAREN SEMICOLON
   42     | READ . RPAREN ID RPAREN

    ID      shift, and go to state 32
    LPAREN  shift, and go to state 33
    RPAREN  shift, and go to state 34


State 4

   61 Stmt: WRITELN . SEMICOLON
   62     | WRITELN . Expr SEMICOLON
   63     | WRITELN . Expr

    ID         shift, and go to state 1
    READ       shift, and go to state 3
    UNARYOP    shift, and go to state 10
    SEMICOLON  shift, and go to state 35
    STRING     shift, and go to state 12
    CHACHA     shift, and go to state 13
    COMMA      shift, and go to state 14
    LPAREN     shift, and go to state 16
    NUMBER     shift, and go to state 17

    Primary  go to state 25
    Expr     go to state 36


State 5

   64 Stmt: BREAK . SEMICOLON
   65     | BREAK .

    SEMICOLON  shift, and go to state 37

    SEMICOLON  [reduce using rule 65 (Stmt)]
    $default   reduce using rule 65 (Stmt)


State 6

   72 Stmt: IFELSE . $@3 LPAREN Expr $@4 RPAREN $@5 Stmt $@6 ELSE $@7 Stmt $@8

    $default  reduce using rule 66 ($@3)

    $@3  go to state 38


State 7

   76 Stmt: IF . LPAREN Expr $@9 RPAREN $@10 Stmt $@11

    LPAREN  shift, and go to state 39


State 8

   79 Stmt: WHILE . $@12 LPAREN Expr RPAREN $@13 Stmt

    $default  reduce using rule 77 ($@12)

    $@12  go to state 40


State 9

    9 VarDecl: TYPE . VarDeclId SEMICOLON
   10        | TYPE . VarDeclId
   14 FunDecl: TYPE . ID LPAREN $@1 ParamDeclList RPAREN Block

    ID  shift, and go to state 41

    VarDeclId  go to state 42


State 10

   43 Expr: UNARYOP . Expr

    ID       shift, and go to state 1
    READ     shift, and go to state 3
    UNARYOP  shift, and go to state 10
    STRING   shift, and go to state 12
    CHACHA   shift, and go to state 13
    COMMA    shift, and go to state 14
    LPAREN   shift, and go to state 16
    NUMBER   shift, and go to state 17

    Primary  go to state 25
    Expr     go to state 43


State 11

   53 Stmt: SEMICOLON .

    $default  reduce using rule 53 (Stmt)


State 12

   32 Primary: STRING .

    $default  reduce using rule 32 (Primary)


State 13

   31 Primary: CHACHA .

    $default  reduce using rule 31 (Primary)


State 14

   35 Primary: COMMA . ID $@2 LPAREN ExprList RPAREN

    ID  shift, and go to state 44


State 15

   19 Block: LCURL . InnerBlockList RCURL
   20      | LCURL . RCURL

    ID         shift, and go to state 1
    RETURN     shift, and go to state 2
    READ       shift, and go to state 3
    WRITELN    shift, and go to state 4
    BREAK      shift, and go to state 5
    IFELSE     shift, and go to state 6
    IF         shift, and go to state 7
    WHILE      shift, and go to state 8
    TYPE       shift, and go to state 45
    UNARYOP    shift, and go to state 10
    SEMICOLON  shift, and go to state 11
    STRING     shift, and go to state 12
    CHACHA     shift, and go to state 13
    COMMA      shift, and go to state 14
    LCURL      shift, and go to state 15
    RCURL      shift, and go to state 46
    LPAREN     shift, and go to state 16
    NUMBER     shift, and go to state 17
    WRITE      shift, and go to state 18

    RCURL  [reduce using rule 22 (InnerBlockList)]

    VarDecl         go to state 47
    Block           go to state 24
    InnerBlockList  go to state 48
    InnerBlock      go to state 49
    Primary         go to state 25
    Expr            go to state 26
    Stmt            go to state 50


State 16

   33 Primary: LPAREN . Expr RPAREN

    ID       shift, and go to state 1
    READ     shift, and go to state 3
    UNARYOP  shift, and go to state 10
    STRING   shift, and go to state 12
    CHACHA   shift, and go to state 13
    COMMA    shift, and go to state 14
    LPAREN   shift, and go to state 16
    NUMBER   shift, and go to state 17

    Primary  go to state 25
    Expr     go to state 51


State 17

   30 Primary: NUMBER .

    $default  reduce using rule 30 (Primary)


State 18

   59 Stmt: WRITE . Expr SEMICOLON
   60     | WRITE . Expr

    ID       shift, and go to state 1
    READ     shift, and go to state 3
    UNARYOP  shift, and go to state 10
    STRING   shift, and go to state 12
    CHACHA   shift, and go to state 13
    COMMA    shift, and go to state 14
    LPAREN   shift, and go to state 16
    NUMBER   shift, and go to state 17

    Primary  go to state 25
    Expr     go to state 52


State 19

    0 $accept: Program . $end

    $end  shift, and go to state 53


State 20

    1 Program: DeclList .

    $default  reduce using rule 1 (Program)


State 21

    2 DeclList: Decl . DeclList

    ID         shift, and go to state 1
    RETURN     shift, and go to state 2
    READ       shift, and go to state 3
    WRITELN    shift, and go to state 4
    BREAK      shift, and go to state 5
    IFELSE     shift, and go to state 6
    IF         shift, and go to state 7
    WHILE      shift, and go to state 8
    TYPE       shift, and go to state 9
    UNARYOP    shift, and go to state 10
    SEMICOLON  shift, and go to state 11
    STRING     shift, and go to state 12
    CHACHA     shift, and go to state 13
    COMMA      shift, and go to state 14
    LCURL      shift, and go to state 15
    LPAREN     shift, and go to state 16
    NUMBER     shift, and go to state 17
    WRITE      shift, and go to state 18

    $default  reduce using rule 3 (DeclList)

    DeclList  go to state 54
    Decl      go to state 21
    VarDecl   go to state 22
    FunDecl   go to state 23
    Block     go to state 24
    Primary   go to state 25
    Expr      go to state 26
    Stmt      go to state 27


State 22

    4 Decl: VarDecl .

    $default  reduce using rule 4 (Decl)


State 23

    5 Decl: FunDecl .

    $default  reduce using rule 5 (Decl)


State 24

   80 Stmt: Block .

    $default  reduce using rule 80 (Stmt)


State 25

   37 Expr: Primary .

    $default  reduce using rule 37 (Expr)


State 26

   44 Expr: Expr . BINOP Expr
   45     | Expr . '+' Expr
   46     | Expr . '-' Expr
   47     | Expr . '*' Expr
   48     | Expr . '/' Expr
   54 Stmt: Expr . SEMICOLON
   55     | Expr .

    BINOP      shift, and go to state 55
    SEMICOLON  shift, and go to state 56
    '+'        shift, and go to state 57
    '-'        shift, and go to state 58
    '*'        shift, and go to state 59
    '/'        shift, and go to state 60

    SEMICOLON  [reduce using rule 55 (Stmt)]
    $default   reduce using rule 55 (Stmt)


State 27

    6 Decl: Stmt .

    $default  reduce using rule 6 (Decl)


State 28

   49 Expr: ID EQ . Expr
   51     | ID EQ .

    ID       shift, and go to state 1
    READ     shift, and go to state 3
    UNARYOP  shift, and go to state 10
    STRING   shift, and go to state 12
    CHACHA   shift, and go to state 13
    COMMA    shift, and go to state 14
    LPAREN   shift, and go to state 16
    NUMBER   shift, and go to state 17

    ID        [reduce using rule 51 (Expr)]
    READ      [reduce using rule 51 (Expr)]
    UNARYOP   [reduce using rule 51 (Expr)]
    STRING    [reduce using rule 51 (Expr)]
    CHACHA    [reduce using rule 51 (Expr)]
    COMMA     [reduce using rule 51 (Expr)]
    NUMBER    [reduce using rule 51 (Expr)]
    $default  reduce using rule 51 (Expr)

    Primary  go to state 25
    Expr     go to state 61


State 29

   36 Primary: ID LBRACK . Expr RBRACK
   50 Expr: ID LBRACK . Expr RBRACK EQ Expr
   52     | ID LBRACK . Expr RBRACK EQ

    ID       shift, and go to state 1
    READ     shift, and go to state 3
    UNARYOP  shift, and go to state 10
    STRING   shift, and go to state 12
    CHACHA   shift, and go to state 13
    COMMA    shift, and go to state 14
    LPAREN   shift, and go to state 16
    NUMBER   shift, and go to state 17

    Primary  go to state 25
    Expr     go to state 62


State 30

   57 Stmt: RETURN SEMICOLON .

    $default  reduce using rule 57 (Stmt)


State 31

   44 Expr: Expr . BINOP Expr
   45     | Expr . '+' Expr
   46     | Expr . '-' Expr
   47     | Expr . '*' Expr
   48     | Expr . '/' Expr
   56 Stmt: RETURN Expr . SEMICOLON
   58     | RETURN Expr .

    BINOP      shift, and go to state 55
    SEMICOLON  shift, and go to state 63
    '+'        shift, and go to state 57
    '-'        shift, and go to state 58
    '*'        shift, and go to state 59
    '/'        shift, and go to state 60

    SEMICOLON  [reduce using rule 58 (Stmt)]
    $default   reduce using rule 58 (Stmt)


State 32

   41 Expr: READ ID . RPAREN SEMICOLON

    RPAREN  shift, and go to state 64


State 33

   38 Expr: READ LPAREN . ID RPAREN SEMICOLON
   39     | READ LPAREN . RPAREN SEMICOLON
   40     | READ LPAREN . ID SEMICOLON

    ID      shift, and go to state 65
    RPAREN  shift, and go to state 66


State 34

   42 Expr: READ RPAREN . ID RPAREN

    ID  shift, and go to state 67


State 35

   61 Stmt: WRITELN SEMICOLON .

    $default  reduce using rule 61 (Stmt)


State 36

   44 Expr: Expr . BINOP Expr
   45     | Expr . '+' Expr
   46     | Expr . '-' Expr
   47     | Expr . '*' Expr
   48     | Expr . '/' Expr
   62 Stmt: WRITELN Expr . SEMICOLON
   63     | WRITELN Expr .

    BINOP      shift, and go to state 55
    SEMICOLON  shift, and go to state 68
    '+'        shift, and go to state 57
    '-'        shift, and go to state 58
    '*'        shift, and go to state 59
    '/'        shift, and go to state 60

    SEMICOLON  [reduce using rule 63 (Stmt)]
    $default   reduce using rule 63 (Stmt)


State 37

   64 Stmt: BREAK SEMICOLON .

    $default  reduce using rule 64 (Stmt)


State 38

   72 Stmt: IFELSE $@3 . LPAREN Expr $@4 RPAREN $@5 Stmt $@6 ELSE $@7 Stmt $@8

    LPAREN  shift, and go to state 69


State 39

   76 Stmt: IF LPAREN . Expr $@9 RPAREN $@10 Stmt $@11

    ID       shift, and go to state 1
    READ     shift, and go to state 3
    UNARYOP  shift, and go to state 10
    STRING   shift, and go to state 12
    CHACHA   shift, and go to state 13
    COMMA    shift, and go to state 14
    LPAREN   shift, and go to state 16
    NUMBER   shift, and go to state 17

    Primary  go to state 25
    Expr     go to state 70


State 40

   79 Stmt: WHILE $@12 . LPAREN Expr RPAREN $@13 Stmt

    LPAREN  shift, and go to state 71


State 41

    7 VarDeclId: ID .
    8          | ID . LBRACK NUMBER RBRACK
   14 FunDecl: TYPE ID . LPAREN $@1 ParamDeclList RPAREN Block

    LBRACK  shift, and go to state 72
    LPAREN  shift, and go to state 73

    LPAREN    [reduce using rule 7 (VarDeclId)]
    $default  reduce using rule 7 (VarDeclId)


State 42

    9 VarDecl: TYPE VarDeclId . SEMICOLON
   10        | TYPE VarDeclId .

    SEMICOLON  shift, and go to state 74

    SEMICOLON  [reduce using rule 10 (VarDecl)]
    $default   reduce using rule 10 (VarDecl)


State 43

   43 Expr: UNARYOP Expr .
   44     | Expr . BINOP Expr
   45     | Expr . '+' Expr
   46     | Expr . '-' Expr
   47     | Expr . '*' Expr
   48     | Expr . '/' Expr

    BINOP  shift, and go to state 55
    '+'    shift, and go to state 57
    '-'    shift, and go to state 58
    '*'    shift, and go to state 59
    '/'    shift, and go to state 60

    BINOP     [reduce using rule 43 (Expr)]
    '+'       [reduce using rule 43 (Expr)]
    '-'       [reduce using rule 43 (Expr)]
    '*'       [reduce using rule 43 (Expr)]
    '/'       [reduce using rule 43 (Expr)]
    $default  reduce using rule 43 (Expr)


State 44

   35 Primary: COMMA ID . $@2 LPAREN ExprList RPAREN

    $default  reduce using rule 34 ($@2)

    $@2  go to state 75


State 45

    9 VarDecl: TYPE . VarDeclId SEMICOLON
   10        | TYPE . VarDeclId

    ID  shift, and go to state 76

    VarDeclId  go to state 42


State 46

   20 Block: LCURL RCURL .

    $default  reduce using rule 20 (Block)


State 47

   23 InnerBlock: VarDecl .

    $default  reduce using rule 23 (InnerBlock)


State 48

   19 Block: LCURL InnerBlockList . RCURL

    RCURL  shift, and go to state 77


State 49

   21 InnerBlockList: InnerBlock . InnerBlockList

    ID         shift, and go to state 1
    RETURN     shift, and go to state 2
    READ       shift, and go to state 3
    WRITELN    shift, and go to state 4
    BREAK      shift, and go to state 5
    IFELSE     shift, and go to state 6
    IF         shift, and go to state 7
    WHILE      shift, and go to state 8
    TYPE       shift, and go to state 45
    UNARYOP    shift, and go to state 10
    SEMICOLON  shift, and go to state 11
    STRING     shift, and go to state 12
    CHACHA     shift, and go to state 13
    COMMA      shift, and go to state 14
    LCURL      shift, and go to state 15
    LPAREN     shift, and go to state 16
    NUMBER     shift, and go to state 17
    WRITE      shift, and go to state 18

    $default  reduce using rule 22 (InnerBlockList)

    VarDecl         go to state 47
    Block           go to state 24
    InnerBlockList  go to state 78
    InnerBlock      go to state 49
    Primary         go to state 25
    Expr            go to state 26
    Stmt            go to state 50


State 50

   24 InnerBlock: Stmt .

    $default  reduce using rule 24 (InnerBlock)


State 51

   33 Primary: LPAREN Expr . RPAREN
   44 Expr: Expr . BINOP Expr
   45     | Expr . '+' Expr
   46     | Expr . '-' Expr
   47     | Expr . '*' Expr
   48     | Expr . '/' Expr

    BINOP   shift, and go to state 55
    RPAREN  shift, and go to state 79
    '+'     shift, and go to state 57
    '-'     shift, and go to state 58
    '*'     shift, and go to state 59
    '/'     shift, and go to state 60


State 52

   44 Expr: Expr . BINOP Expr
   45     | Expr . '+' Expr
   46     | Expr . '-' Expr
   47     | Expr . '*' Expr
   48     | Expr . '/' Expr
   59 Stmt: WRITE Expr . SEMICOLON
   60     | WRITE Expr .

    BINOP      shift, and go to state 55
    SEMICOLON  shift, and go to state 80
    '+'        shift, and go to state 57
    '-'        shift, and go to state 58
    '*'        shift, and go to state 59
    '/'        shift, and go to state 60

    SEMICOLON  [reduce using rule 60 (Stmt)]
    $default   reduce using rule 60 (Stmt)


State 53

    0 $accept: Program $end .

    $default  accept


State 54

    2 DeclList: Decl DeclList .

    $default  reduce using rule 2 (DeclList)


State 55

   44 Expr: Expr BINOP . Expr

    ID       shift, and go to state 1
    READ     shift, and go to state 3
    UNARYOP  shift, and go to state 10
    STRING   shift, and go to state 12
    CHACHA   shift, and go to state 13
    COMMA    shift, and go to state 14
    LPAREN   shift, and go to state 16
    NUMBER   shift, and go to state 17

    Primary  go to state 25
    Expr     go to state 81


State 56

   54 Stmt: Expr SEMICOLON .

    $default  reduce using rule 54 (Stmt)


State 57

   45 Expr: Expr '+' . Expr

    ID       shift, and go to state 1
    READ     shift, and go to state 3
    UNARYOP  shift, and go to state 10
    STRING   shift, and go to state 12
    CHACHA   shift, and go to state 13
    COMMA    shift, and go to state 14
    LPAREN   shift, and go to state 16
    NUMBER   shift, and go to state 17

    Primary  go to state 25
    Expr     go to state 82


State 58

   46 Expr: Expr '-' . Expr

    ID       shift, and go to state 1
    READ     shift, and go to state 3
    UNARYOP  shift, and go to state 10
    STRING   shift, and go to state 12
    CHACHA   shift, and go to state 13
    COMMA    shift, and go to state 14
    LPAREN   shift, and go to state 16
    NUMBER   shift, and go to state 17

    Primary  go to state 25
    Expr     go to state 83


State 59

   47 Expr: Expr '*' . Expr

    ID       shift, and go to state 1
    READ     shift, and go to state 3
    UNARYOP  shift, and go to state 10
    STRING   shift, and go to state 12
    CHACHA   shift, and go to state 13
    COMMA    shift, and go to state 14
    LPAREN   shift, and go to state 16
    NUMBER   shift, and go to state 17

    Primary  go to state 25
    Expr     go to state 84


State 60

   48 Expr: Expr '/' . Expr

    ID       shift, and go to state 1
    READ     shift, and go to state 3
    UNARYOP  shift, and go to state 10
    STRING   shift, and go to state 12
    CHACHA   shift, and go to state 13
    COMMA    shift, and go to state 14
    LPAREN   shift, and go to state 16
    NUMBER   shift, and go to state 17

    Primary  go to state 25
    Expr     go to state 85


State 61

   44 Expr: Expr . BINOP Expr
   45     | Expr . '+' Expr
   46     | Expr . '-' Expr
   47     | Expr . '*' Expr
   48     | Expr . '/' Expr
   49     | ID EQ Expr .

    BINOP  shift, and go to state 55
    '+'    shift, and go to state 57
    '-'    shift, and go to state 58
    '*'    shift, and go to state 59
    '/'    shift, and go to state 60

    BINOP     [reduce using rule 49 (Expr)]
    $default  reduce using rule 49 (Expr)


State 62

   36 Primary: ID LBRACK Expr . RBRACK
   44 Expr: Expr . BINOP Expr
   45     | Expr . '+' Expr
   46     | Expr . '-' Expr
   47     | Expr . '*' Expr
   48     | Expr . '/' Expr
   50     | ID LBRACK Expr . RBRACK EQ Expr
   52     | ID LBRACK Expr . RBRACK EQ

    BINOP   shift, and go to state 55
    RBRACK  shift, and go to state 86
    '+'     shift, and go to state 57
    '-'     shift, and go to state 58
    '*'     shift, and go to state 59
    '/'     shift, and go to state 60


State 63

   56 Stmt: RETURN Expr SEMICOLON .

    $default  reduce using rule 56 (Stmt)


State 64

   41 Expr: READ ID RPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 87


State 65

   38 Expr: READ LPAREN ID . RPAREN SEMICOLON
   40     | READ LPAREN ID . SEMICOLON

    SEMICOLON  shift, and go to state 88
    RPAREN     shift, and go to state 89


State 66

   39 Expr: READ LPAREN RPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 90


State 67

   42 Expr: READ RPAREN ID . RPAREN

    RPAREN  shift, and go to state 91


State 68

   62 Stmt: WRITELN Expr SEMICOLON .

    $default  reduce using rule 62 (Stmt)


State 69

   72 Stmt: IFELSE $@3 LPAREN . Expr $@4 RPAREN $@5 Stmt $@6 ELSE $@7 Stmt $@8

    ID       shift, and go to state 1
    READ     shift, and go to state 3
    UNARYOP  shift, and go to state 10
    STRING   shift, and go to state 12
    CHACHA   shift, and go to state 13
    COMMA    shift, and go to state 14
    LPAREN   shift, and go to state 16
    NUMBER   shift, and go to state 17

    Primary  go to state 25
    Expr     go to state 92


State 70

   44 Expr: Expr . BINOP Expr
   45     | Expr . '+' Expr
   46     | Expr . '-' Expr
   47     | Expr . '*' Expr
   48     | Expr . '/' Expr
   76 Stmt: IF LPAREN Expr . $@9 RPAREN $@10 Stmt $@11

    BINOP  shift, and go to state 55
    '+'    shift, and go to state 57
    '-'    shift, and go to state 58
    '*'    shift, and go to state 59
    '/'    shift, and go to state 60

    $default  reduce using rule 73 ($@9)

    $@9  go to state 93


State 71

   79 Stmt: WHILE $@12 LPAREN . Expr RPAREN $@13 Stmt

    ID       shift, and go to state 1
    READ     shift, and go to state 3
    UNARYOP  shift, and go to state 10
    STRING   shift, and go to state 12
    CHACHA   shift, and go to state 13
    COMMA    shift, and go to state 14
    LPAREN   shift, and go to state 16
    NUMBER   shift, and go to state 17

    Primary  go to state 25
    Expr     go to state 94


State 72

    8 VarDeclId: ID LBRACK . NUMBER RBRACK

    NUMBER  shift, and go to state 95


State 73

   14 FunDecl: TYPE ID LPAREN . $@1 ParamDeclList RPAREN Block

    $default  reduce using rule 13 ($@1)

    $@1  go to state 96


State 74

    9 VarDecl: TYPE VarDeclId SEMICOLON .

    $default  reduce using rule 9 (VarDecl)


State 75

   35 Primary: COMMA ID $@2 . LPAREN ExprList RPAREN

    LPAREN  shift, and go to state 97


State 76

    7 VarDeclId: ID .
    8          | ID . LBRACK NUMBER RBRACK

    LBRACK  shift, and go to state 72

    $default  reduce using rule 7 (VarDeclId)


State 77

   19 Block: LCURL InnerBlockList RCURL .

    $default  reduce using rule 19 (Block)


State 78

   21 InnerBlockList: InnerBlock InnerBlockList .

    $default  reduce using rule 21 (InnerBlockList)


State 79

   33 Primary: LPAREN Expr RPAREN .

    $default  reduce using rule 33 (Primary)


State 80

   59 Stmt: WRITE Expr SEMICOLON .

    $default  reduce using rule 59 (Stmt)


State 81

   44 Expr: Expr . BINOP Expr
   44     | Expr BINOP Expr .
   45     | Expr . '+' Expr
   46     | Expr . '-' Expr
   47     | Expr . '*' Expr
   48     | Expr . '/' Expr

    BINOP  shift, and go to state 55
    '+'    shift, and go to state 57
    '-'    shift, and go to state 58
    '*'    shift, and go to state 59
    '/'    shift, and go to state 60

    BINOP     [reduce using rule 44 (Expr)]
    '+'       [reduce using rule 44 (Expr)]
    '-'       [reduce using rule 44 (Expr)]
    '*'       [reduce using rule 44 (Expr)]
    '/'       [reduce using rule 44 (Expr)]
    $default  reduce using rule 44 (Expr)


State 82

   44 Expr: Expr . BINOP Expr
   45     | Expr . '+' Expr
   45     | Expr '+' Expr .
   46     | Expr . '-' Expr
   47     | Expr . '*' Expr
   48     | Expr . '/' Expr

    BINOP  shift, and go to state 55
    '*'    shift, and go to state 59
    '/'    shift, and go to state 60

    BINOP     [reduce using rule 45 (Expr)]
    $default  reduce using rule 45 (Expr)


State 83

   44 Expr: Expr . BINOP Expr
   45     | Expr . '+' Expr
   46     | Expr . '-' Expr
   46     | Expr '-' Expr .
   47     | Expr . '*' Expr
   48     | Expr . '/' Expr

    BINOP  shift, and go to state 55
    '*'    shift, and go to state 59
    '/'    shift, and go to state 60

    BINOP     [reduce using rule 46 (Expr)]
    $default  reduce using rule 46 (Expr)


State 84

   44 Expr: Expr . BINOP Expr
   45     | Expr . '+' Expr
   46     | Expr . '-' Expr
   47     | Expr . '*' Expr
   47     | Expr '*' Expr .
   48     | Expr . '/' Expr

    BINOP  shift, and go to state 55

    BINOP     [reduce using rule 47 (Expr)]
    $default  reduce using rule 47 (Expr)


State 85

   44 Expr: Expr . BINOP Expr
   45     | Expr . '+' Expr
   46     | Expr . '-' Expr
   47     | Expr . '*' Expr
   48     | Expr . '/' Expr
   48     | Expr '/' Expr .

    BINOP  shift, and go to state 55

    BINOP     [reduce using rule 48 (Expr)]
    $default  reduce using rule 48 (Expr)


State 86

   36 Primary: ID LBRACK Expr RBRACK .
   50 Expr: ID LBRACK Expr RBRACK . EQ Expr
   52     | ID LBRACK Expr RBRACK . EQ

    EQ  shift, and go to state 98
